--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.1.2"
+    "hbs": "^4.1.2",
+    "socket.io": "^4.1.3"
   },
   "name": "chat-app",
   "version": "1.0.0",
@@ -10,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "dev" : "nodemon server/server.js" 
+    "dev": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
