--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.2",
+    "jquery": "^3.6.0",
     "socket.io": "^4.1.3"
   },
   "name": "chat-app",
